[package]
name = "ml-inference-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.102"
tower_governor = "0.8.0"

